# AudiobookOrganizer

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  nginx.conf
.claude/: settings.local.json
.github/workflows/: docker-build.yml
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  book.py  lookup_cache.py  lookup_candidate.py  scan.py  settings.py  user.py
backend/app/routers/: auth.py  books.py  organize.py  scans.py  settings.py  stats.py
backend/app/schemas/: auth.py  book.py  organize.py  scan.py  settings.py
backend/app/services/: candidates.py  integrity.py  lookup.py  metadata.py  organizer.py  parser.py  purger.py  reimport.py  scanner.py  tagwriter.py
backend/tests/: conftest.py  test_auth.py  test_books_query.py  test_bulk_update_and_lock.py  test_candidates.py  test_cover_art.py  test_lookup_cache.py  test_lookup_perf.py  test_organizer.py  test_parser.py  test_placeholder.py  test_pr7.py  test_purge_and_delete.py  test_reimport_and_organize.py  test_scanner_loose_files.py  test_stats_and_duplicates.py  test_tagwriter.py  test_undo_and_relookup.py
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: BookEditModal.tsx  BulkEditModal.tsx  CandidatesModal.tsx  ConfidenceBadge.tsx  ConfirmDialog.tsx  DirectoryBrowser.tsx  ErrorBoundary.tsx  Layout.tsx  LookupResults.tsx  SearchField.tsx  SearchModal.tsx  SourceBadge.tsx  Toast.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  EmptyState.tsx  Input.tsx  Modal.tsx  Select.tsx  Skeleton.tsx  Toggle.tsx  (+1 more)
frontend/src/hooks/: useBooks.ts  useScans.ts  useSettings.ts  useTheme.ts
frontend/src/pages/: DuplicatesPage.tsx  LibraryPage.tsx  LoginPage.tsx  OrganizePage.tsx  PurgePage.tsx  RegisterPage.tsx  ReviewPage.tsx  ScanPage.tsx  SettingsPage.tsx
frontend/src/types/: index.ts
