[project]
name = "audiobook-organizer"
version = "1.9.2"
description = "Web-based audiobook organizer for Chaptarr-compatible folder structures"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.30.0,<1.0",
    "sqlalchemy>=2.0.0,<3.0",
    "alembic>=1.13.0,<2.0",
    "mutagen>=1.47.0,<2.0",
    "httpx>=0.27.0,<1.0",
    "pydantic>=2.0.0,<3.0",
    "pydantic-settings>=2.0.0,<3.0",
    "python-dotenv>=1.0.0,<2.0",
    "aiosqlite>=0.20.0,<1.0",
    "audible>=0.9.0,<1.0",
    "rapidfuzz>=3.6.0,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0",
    "pytest-asyncio>=0.23.0,<1.0",
    "httpx>=0.27.0,<1.0",
    "ruff>=0.4.0,<1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
